src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>All_Members_Deceased__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, all members of this household are deceased. Do not update this field manually. It&apos;s updated automatically by NPSP as a result of updates to the Deceased checkbox on household member Contacts.</description>
        <inlineHelpText>If selected, all members of this household are deceased. Do not update this field manually. It&apos;s updated automatically by NPSP as a result of updates to the Deceased checkbox on household member Contacts.</inlineHelpText>
        <label>All Household Members Deceased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The batch this Account was created in.</inlineHelpText>
        <label>Batch</label>
        <referenceTo>Batch__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomizableRollups_UseSkewMode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, Customizable Rollups will always use &apos;Skew Mode&apos; to rollup Hard Credit and Soft Credits for this record.</description>
        <inlineHelpText>When checked, Customizable Rollups will always use &apos;Skew Mode&apos; to rollup Hard Credit and Soft Credits for this record.</inlineHelpText>
        <label>Customizable Rollups: Force Skew Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Funding_Focus__c</fullName>
        <description>The general program area(s) that this organization funds.</description>
        <inlineHelpText>The general program area(s) that this organization funds.</inlineHelpText>
        <label>Funding Focus</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Animal Welfare</fullName>
                </value>
                <value>
                    <fullName>Arts and Culture</fullName>
                </value>
                <value>
                    <fullName>Capacity Building</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Health Services</fullName>
                </value>
                <value>
                    <fullName>Human Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grantmaker__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this organization is a grantmaking organization.</description>
        <inlineHelpText>Indicates that this organization is a grantmaking organization.</inlineHelpText>
        <label>Grantmaker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Matching_Gift_Administrator_Name__c</fullName>
        <description>The name of the company&apos;s Matching Gift administrator.</description>
        <inlineHelpText>The name of the company&apos;s Matching Gift administrator.</inlineHelpText>
        <label>Matching Gift Administrator Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matching_Gift_Amount_Max__c</fullName>
        <description>The maximum amount the company will match on any single gift.</description>
        <inlineHelpText>The maximum amount the company will match on any single gift.</inlineHelpText>
        <label>Matching Gift Amount Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Matching_Gift_Amount_Min__c</fullName>
        <description>The smallest amount the company will match on any single gift.</description>
        <inlineHelpText>The smallest amount the company will match on any single gift.</inlineHelpText>
        <label>Matching Gift Amount Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Matching_Gift_Annual_Employee_Max__c</fullName>
        <description>The maximum amount the company will match each year for an employee.</description>
        <inlineHelpText>The maximum amount the company will match each year for an employee.</inlineHelpText>
        <label>Matching Gift Annual Employee Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Matching_Gift_Comments__c</fullName>
        <description>Additional notes about the company&apos;s Matching Gift program.</description>
        <inlineHelpText>Additional notes about the company&apos;s Matching Gift program.</inlineHelpText>
        <label>Matching Gift Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Matching_Gift_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this company offers Matching Gifts.</description>
        <inlineHelpText>Indicates that this company offers Matching Gifts.</inlineHelpText>
        <label>Matching Gift Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Matching_Gift_Email__c</fullName>
        <description>Email of the company&apos;s Matching Gift administrator.</description>
        <inlineHelpText>Email of the company&apos;s Matching Gift administrator.</inlineHelpText>
        <label>Matching Gift Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Matching_Gift_Info_Updated__c</fullName>
        <description>The date you last updated the Matching Gift information.</description>
        <inlineHelpText>The date you last updated the Matching Gift information.</inlineHelpText>
        <label>Matching Gift Info Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Matching_Gift_Percent__c</fullName>
        <description>The portion of a gift the company will match.</description>
        <inlineHelpText>The portion of a gift the company will match.</inlineHelpText>
        <label>Matching Gift Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Matching_Gift_Phone__c</fullName>
        <description>The phone number of the company&apos;s Matching Gift administrator.</description>
        <inlineHelpText>The phone number of the company&apos;s Matching Gift administrator.</inlineHelpText>
        <label>Matching Gift Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Matching_Gift_Request_Deadline__c</fullName>
        <description>Use this field to note any age restrictions this company places on Matching Gift eligibility.</description>
        <inlineHelpText>Use this field to note any age restrictions this company places on Matching Gift eligibility.</inlineHelpText>
        <label>Matching Gift Request Deadline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Span__c</fullName>
        <description>The number of years that a member of this Household has had a Membership (read only).</description>
        <formula>year(npo02__MembershipEndDate__c ) - year(npo02__MembershipJoinDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of years that a member of this Household has had a Membership (read only).</inlineHelpText>
        <label>Membership Span</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Membership_Status__c</fullName>
        <description>The Membership status of this Household, for example, Current, Expired, or Grace Period. The value is based on Membership End Date and Grace Period. The Default Grace Period is set in NPSP Settings, under Household Settings. This field is read only.</description>
        <formula>if ( npo02__MembershipEndDate__c  &lt;today(), if (npo02__MembershipEndDate__c  &gt; ( TODAY() -
IF(NOT(ISNULL($Setup.npo02__Households_Settings__c.npo02__Membership_Grace_Period__c)), $Setup.npo02__Households_Settings__c.npo02__Membership_Grace_Period__c, 30)) , &quot;Grace Period&quot; , &quot;Expired&quot;) , if(isnull(npo02__MembershipEndDate__c ),&quot;&quot;,&quot;Current&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Membership status of this Household, for example, Current, Expired, or Grace Period. The value is based on Membership End Date and Grace Period. The Default Grace Period is set in NPSP Settings, under Household Settings. This field is read only.</inlineHelpText>
        <label>Membership Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Household_Members__c</fullName>
        <description>The number of Contacts who are members of this Household.</description>
        <inlineHelpText>The number of Contacts who are members of this Household.</inlineHelpText>
        <label>Number of Household Members</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sustainer__c</fullName>
        <description>Indicates if this Account is an active, lapsed, or former recurring donor. The value is based on the Status of the related Recurring Donations.</description>
        <inlineHelpText>Indicates if this Account is an active, lapsed, or former recurring donor. The value is based on the Status of the related Recurring Donations.</inlineHelpText>
        <label>Sustainer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Lapsed</fullName>
                </value>
                <value>
                    <fullName>Former</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Undeliverable_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the address is undeliverable.</description>
        <label>Undeliverable Billing Address</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>